--- a/styles/sass/_offer.sass
+++ b/styles/sass/_offer.sass
@@ -1,6 +1,6 @@
 .form
   padding: .3rem 0
-    bottom: .6rem
+    bottom: 1.2rem
   background-image: url(../../img/form-bg.svg)
   background-size: cover
   background-position: top center
