--- a/styles/sass/_most.sass
+++ b/styles/sass/_most.sass
@@ -9,6 +9,7 @@ html
   font-size: 21vw
   @media (min-width: 481px)
     font-size: 100px
+    overflow-x: hidden
 body
   font-size: .22rem
   max-width: 480px
@@ -111,7 +112,7 @@ section, .main
   0%
     transform: scale(1)
   50%
-    transform: scale(1.05)
+    transform: scale(1.06)
   100%
     transform: scale(1)
 
@@ -174,3 +175,18 @@ section, .main
 .slick-dots li.slick-active button:before
   opacity: 1
   color: $dots-active
+
+.slick-navigation
+  border: none
+  background: transparent
+  position: absolute
+  top: 2.3rem
+  outline: none
+  cursor: pointer
+  animation: btn 3s linear infinite
+  z-index: 1
+  &.prev
+    left: 0
+  &.next
+    right: 0
+    animation-delay: .5s
